# Customer_QA_Assistant

./: ingest.py  main.py  notebook.ipynb  pyproject.toml  requirements.txt
database/: customers.csv
logs/: customer_queries.csv
vectordb/: index.pkl
